Fix dropdowns, so arrow appears on mobile

--- a/assets/sass/components/_dropdowns.scss
+++ b/assets/sass/components/_dropdowns.scss
@@ -17,6 +17,8 @@
 		- Dropdown menu needs to be semi-bold
 	10-04-2016:
 		- Add a '--settings' flag, which removes horizontal padding and the chevron. Force the cursor: pointer; and greatly changes coloring
+	10-10-2016:
+		- Add box-sizing to trigger. May eventually need on all elements in the future
 */
 
 .dropdown {
@@ -111,6 +113,7 @@
 	position: relative;
 	display: block;
     color: inherit;
+    box-sizing: border-box;
 	line-height: $line-height-base;
 	padding: $padding-base-vertical $padding-base-horizontal;
 	&:hover,
